# halide-playground

./: .gitignore  CMakeLists.txt  README.md  flake.nix  pyproject.toml
halide/: CMakeLists.txt
halide/blur-image/: CMakeLists.txt  main.cpp
halide/generator/: CMakeLists.txt  generator.cpp
halide/getting-started/: CMakeLists.txt  main.cpp
halide/mandelbrot-set/: CMakeLists.txt  main.cpp
halide/processing-image/: CMakeLists.txt  main.cpp
halide/stmt-codegen/: CMakeLists.txt  main.cpp
notebooks/: halide-playground.ipynb
